--- a/BF1ServerTools/Views/RobotView.xaml
+++ b/BF1ServerTools/Views/RobotView.xaml
@@ -9,124 +9,124 @@
     d:DesignWidth="1280"
     mc:Ignorable="d">
 
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="400" />
-            <ColumnDefinition Width="400" />
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
-        <!--  ************************************  -->
-        <TextBox
-            x:Name="TextBox_ConsoleLogger"
-            Margin="5"
-            Style="{StaticResource TextBoxStyle_Logger}" />
-        <!--  ************************************  -->
-        <StackPanel Grid.Column="1">
-            <ui:UiLabelIcon Content="功能开关" />
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="400" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="400" />
+            </Grid.ColumnDefinitions>
 
-            <!-- 水平方向的StackPanel包含两个按钮 -->
-            <StackPanel Orientation="Horizontal">
-                <Button
-            x:Name="Button_RunGoCqHttpServer"
-            Click="Button_RunGoCqHttpServer_Click"
-            Content="启动自动平衡"
-            Width="191" />
-                <!-- 按钮宽度 -->
+            <!-- 左侧控制台日志区域 -->
+            <TextBox
+                x:Name="TextBox_ConsoleLogger"
+                Grid.Column="0"
+                Margin="5"
+                Style="{StaticResource TextBoxStyle_Logger}"
+                VerticalScrollBarVisibility="Auto"
+                HorizontalScrollBarVisibility="Auto"
+                TextWrapping="Wrap" />
 
-                <Button
-            x:Name="Button_Balance"
-            Click="Button_Balance_Click"
-            Content="立刻启动平衡"
-            Width="190" />
-                <!-- 新按钮宽度 -->
-            </StackPanel>
+            <!-- 中间功能区域 -->
+            <StackPanel Grid.Column="1" Margin="5">
+                <ui:UiLabelIcon Content="功能开关" />
 
-            <Slider
-        x:Name="slider"
-        Minimum="1"
-        Maximum="60"
-        ValueChanged="Slider_ValueChanged"
-        TickFrequency="1"
-        IsSnapToTickEnabled="True" />
+                <StackPanel Orientation="Horizontal" Margin="0,10,0,10">
+                    <Button
+                        x:Name="Button_RunGoCqHttpServer"
+                        Click="Button_RunGoCqHttpServer_Click"
+                        Content="启动自动平衡"
+                        Width="191" />
+                    <Button
+                        x:Name="Button_Balance"
+                        Click="Button_Balance_Click"
+                        Content="立刻启动平衡"
+                        Width="190" />
+                </StackPanel>
 
-            <Label
-        x:Name="labelCurrentMinutes"
-        Content="当前自动平衡间隔为0分钟"
-        Margin="5" />
+                <Slider
+                    x:Name="slider"
+                    Minimum="1"
+                    Maximum="60"
+                    ValueChanged="Slider_ValueChanged"
+                    TickFrequency="1"
+                    IsSnapToTickEnabled="True" />
+                <Label
+                    x:Name="labelCurrentMinutes"
+                    Content="当前自动平衡间隔为0分钟"
+                    Margin="5" />
 
-            <!-- 用于“启动投票选图”和“关闭自动平衡”按钮 -->
-            <UniformGrid Columns="2">
-                <Button
-            x:Name="Button_RunWebsocketServer"
-            Margin="5,0,2,5"
-            Click="Button_RunWebsocketServer_Click"
-            Content="启动投票选图" />
-                <Button
-            x:Name="Button_StopWebsocketServer"
-            Margin="2,0,5,5"
-            Click="Button_StopWebsocketServer_Click"
-            Content="关闭自动平衡" />
-            </UniformGrid>
+                <UniformGrid Columns="2" Margin="0,10,0,10">
+                    <Button
+                        x:Name="Button_RunWebsocketServer"
+                        Margin="5,0,2,5"
+                        Click="Button_RunWebsocketServer_Click"
+                        Content="启动投票选图" />
+                    <Button
+                        x:Name="Button_StopWebsocketServer"
+                        Margin="2,0,5,5"
+                        Click="Button_StopWebsocketServer_Click"
+                        Content="关闭自动平衡" />
+                </UniformGrid>
 
-            <TextBlock Style="{StaticResource TextBlockStyle_Hint}">
-        提示：想关闭投票选图关闭程序即可
-            </TextBlock>
-            <ui:UiLabelIcon Content="平衡参数调整" />
+                <TextBlock Style="{StaticResource TextBlockStyle_Hint}">
+                    提示：想关闭投票选图关闭程序即可
+                </TextBlock>
+                <ui:UiLabelIcon Content="平衡参数调整" />
 
-            <UniformGrid Columns="1" Height="Auto">
-                <DockPanel MinWidth="300">
-                    <!-- 增加了最小宽度 -->
-                    <!-- 添加一个复选框用于控制是否排除VIP和管理员 -->
+                <DockPanel MinWidth="300" Margin="0,10,0,10">
                     <CheckBox x:Name="ExcludeAdminsAndVIPsCheckBox" Content="排除VIP和管理员" DockPanel.Dock="Top" />
                     <Slider
-            x:Name="sliderkdkpm"
-            Minimum="-1"
-            Maximum="1"
-            ValueChanged="Slider_ValueChangedkdkpm"
-            TickFrequency="0.01"
-            IsSnapToTickEnabled="True"
-            DockPanel.Dock="Top" />
-                    <!-- 确保滑块停靠在顶部 -->
-
+                        x:Name="sliderkdkpm"
+                        Minimum="-1"
+                        Maximum="1"
+                        ValueChanged="Slider_ValueChangedkdkpm"
+                        TickFrequency="0.01"
+                        IsSnapToTickEnabled="True"
+                        DockPanel.Dock="Top" />
                     <TextBlock
-            x:Name="labelCurrentkdkpm"
-            Text="平衡目标为进攻(队伍1)lifekd、lifekp高于防守(队伍2){}(+-0.5)"
-            Margin="5"
-            DockPanel.Dock="Top"
-            TextWrapping="Wrap" />
-                    <!-- 启用文本换行并更正显示内容 -->
+                        x:Name="labelCurrentkdkpm"
+                        Text="平衡目标为进攻(队伍1)lifekd、lifekp高于防守(队伍2){}(+-0.5)"
+                        Margin="5"
+                        DockPanel.Dock="Top"
+                        TextWrapping="Wrap" />
                 </DockPanel>
-                <CheckBox x:Name="skillbalance" Content="切换至技巧值平衡，这会在导致平衡时忽略lifekp和lifekpm" DockPanel.Dock="Top" />
+
+                <CheckBox x:Name="skillbalance" Content="切换至技巧值平衡，这会在导致平衡时忽略lifekp和lifekpm" Margin="0,5,0,5" />
                 <Slider
-        x:Name="sliderskill"
-        Minimum="-300"
-        Maximum="300"
-        ValueChanged="Slider_ValueChangedskill"
-        TickFrequency="10"
-        IsSnapToTickEnabled="True"
-        DockPanel.Dock="Top" />
+                    x:Name="sliderskill"
+                    Minimum="-300"
+                    Maximum="300"
+                    ValueChanged="Slider_ValueChangedskill"
+                    TickFrequency="10"
+                    IsSnapToTickEnabled="True" />
                 <TextBlock
-        x:Name="labelCurrentdskill"
-        Text="平衡目标为进攻(队伍1)技巧值高于防守(队伍2){}(+-30)"
-        Margin="5"
-        DockPanel.Dock="Top"
-        TextWrapping="Wrap" />
-                <Button Content="播报当前投票信息" Click="Reportmapinfo_Click" />
-            </UniformGrid>
+                    x:Name="labelCurrentdskill"
+                    Text="平衡目标为进攻(队伍1)技巧值高于防守(队伍2){}(+-30)"
+                    Margin="5"
+                    TextWrapping="Wrap" />
+                <Button Content="播报当前投票信息" Click="Reportmapinfo_Click" Margin="0,10,0,0" />
+                <Slider
+    x:Name="slidervote"
+    Minimum="0"
+    Maximum="15"
+    ValueChanged="Slider_ValueChangedvote"
+    TickFrequency="1"
+    IsSnapToTickEnabled="True" />
+                <TextBlock
+    x:Name="labelCurrentdvote"
+    Text="播报间隔为（） 0=永不自动播报"
+    Margin="5"
+    TextWrapping="Wrap" />
+            </StackPanel>
 
-            <!--  ********************  -->
-            <ui:UiLabelIcon Content="高级功能" />
-            <WrapPanel>
-                
-            </WrapPanel>
-        </StackPanel>
-        <!--  ************************************  -->
-        <StackPanel Grid.Column="2">
-            <ui:UiLabelIcon Content="刷分服" />
-            <UniformGrid Columns="2">
-                <Button Content="启动刷分服换图" Click="shuafen" />
-            </UniformGrid>
-        </StackPanel>
-    </Grid>
-
+            <!-- 右侧功能区域 -->
+            <StackPanel Grid.Column="2" Margin="5">
+                <ui:UiLabelIcon Content="刷分服" />
+                <UniformGrid Columns="2">
+                    <Button Content="刷分服模式启动" Click="shuafenfu" />
+                </UniformGrid>
+            </StackPanel>
+        </Grid>
+    </ScrollViewer>
 </UserControl>
